KubePrep/kube_cluster_prep/conf/istio/gen-gateway-teastore.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    #- "*"
    - teastore-webui.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-gen
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: tea
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-gen-through-egress-gateway
spec:
  hosts:
  - teastore-webui.default.svc.cluster.local
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: tea
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: teastore-webui.default.svc.cluster.local
        port:
          number: 8080
      weight: 100
