KubePrep/kube_cluster_prep/conf/istio/socialnetwork-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-thrift-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: socialnetwork
spec:
  hosts:
  - "*"
  gateways:
  - nginx-thrift-gateway
  http:
  #- match:
    #- uri:
      #    exact: /
  - route:
    - destination:
        host: nginx-thrift
        port:
          number: 8080
