KubePrep/kube_cluster_prep/conf/istio/teastore-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: teastore-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: teastore
spec:
  hosts:
  - "*"
  gateways:
  - teastore-gateway
  http:
  - match:
    - uri:
        exact: /tools.descartes.teastore.webui
    route:
    - destination:
        host: teastore-webui
        port:
          number: 8080
